--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel = "stylesheet" href = "estilos/style.css" type = "text/css">
+    <title>Practica</title>
 </head>
 <body>
-    <h1>Nueva Pagina Web</h1>
+    <header>
+        <div class = "nav_container">
+            <nav>
+                <img src = "estilos/vans.png" class="logo">
+                <ul>
+                    <li>Inicio</li>
+                    <li>Quienes somos</li>
+                    <li>Galeria</li>
+                    <li>Proyectos</li>
+                </ul>
+            </nav>
+        </div>
+
+        <h1>soluciones web</h1>
+    </header>
+
 </body>
 </html>
