correcciones iniciales de la pagina

--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "estilos/style.css" type = "text/css">
-    <title>Practica</title>
+    <title>Casa naranja</title>
 </head>
 <body>
     <header>
-        <div class = "nav_container">
-            <nav>
-                <img src = "estilos/vans.png" class="logo">
-                <ul>
-                    <li>Inicio</li>
-                    <li>Quienes somos</li>
-                    <li>Galeria</li>
-                    <li>Proyectos</li>
+        <div class="contenedor">
+            <nav class="main-nav" aria-label="Main">
+                <ul class="main-nav__list">
+                <li class="main-nav__item">
+                    <a href="#" class="main-nav__link">Inicio</a>
+                </li>
+                <li class="main-nav__item">
+                    <a href="#" class="main-nav__link">Quienes somos</a>
+                </li>
+                <li class="main-nav__item">
+                    <a href="#" class="main-nav__link">galeria</a>
+                </li>
+                <li class="main-nav__item">
+                    <a href="#" class="main-nav__link">Trabajos</a>
+                </li>
                 </ul>
-            </nav>
+            </nav>            
         </div>
-
-        <h1>soluciones web</h1>
+        <h1>Casa naranja</h1>
     </header>
 
 </body>
