Cambio de carpeta a la del proyecto orangeHome

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <a href="#" class="main-nav__link">Inicio</a>
                 </li>
                 <li class="main-nav__item">
-                    <a href="#" class="main-nav__link">Quienes somos</a>
+                    <a href="#" class="main-nav__link">Acerca de nosotros</a>
                 </li>
                 <li class="main-nav__item">
                     <a href="#" class="main-nav__link">galeria</a>
